syntax = "proto3";

option java_package = "com.example.yourapp.datastore";
option java_multiple_files = true;

message UserPrefs {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}